--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ app/design/frontend/base/default/layout/debug.xml
 app/design/frontend/base/default/template/debug/
 app/etc/modules/Magneto_Debug.xml
 skin/frontend/base/default/debug/
+sitemap.xml
